functional parallax website

--- a/index.html
+++ b/index.html
@@ -1,11 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Parallax website?</title>
+  </head>
+  <body>
+    <div class="pimg1">
+      <div class="ptext">
+        <span class="border">Parallax Website?</span>
+      </div>
+    </div>
+
+    <section class="section section-light">
+      <h2>Section One</h2>
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore sed
+        perferendis, nam obcaecati alias deserunt molestias vero incidunt ab
+        nobis delectus eius minus nesciunt consequatur dolor ipsum et facere
+        amet sunt eos laudantium dignissimos! Dignissimos, nisi natus tempora
+        perferendis magnam delectus deleniti vitae ea, alias doloremque tempore
+        dolor non id minus inventore quasi! Quod, porro. Labore nam fugiat
+        maiores error eos quae maxime consequatur quas. Mollitia doloribus unde
+        nobis eaque perferendis veritatis totam asperiores doloremque.
+      </p>
+    </section>
+
+    <div class="pimg2">
+      <div class="ptext">
+        <span class="border trans"> Image Two Text </span>
+      </div>
+    </div>
+
+    <section class="section section-dark">
+      <h2>Section Two</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo officiis
+        consequuntur, sint pariatur dignissimos animi numquam perspiciatis
+        recusandae saepe dolorum cum quos sapiente harum sit repellendus maxime
+        corporis necessitatibus qui esse sequi tenetur! Fugiat corrupti fuga
+        labore autem voluptatem. Deleniti laudantium cumque et, quibusdam est
+        earum deserunt officiis tempora dicta! Obcaecati odio labore culpa
+        quisquam, voluptates quibusdam soluta saepe repellendus laudantium
+        magnam ducimus ratione ea vitae provident laboriosam quaerat assumenda.
+      </p>
+    </section>
+
+    <div class="pimg3">
+      <div class="ptext">
+        <span class="border trans"> Image Three Text </span>
+      </div>
+    </div>
+
+    <section class="section section-dark">
+      <h2>Section Three</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo officiis
+        consequuntur, sint pariatur dignissimos animi numquam perspiciatis
+        recusandae saepe dolorum cum quos sapiente harum sit repellendus maxime
+        corporis necessitatibus qui esse sequi tenetur! Fugiat corrupti fuga
+        labore autem voluptatem. Deleniti laudantium cumque et, quibusdam est
+        earum deserunt officiis tempora dicta! Obcaecati odio labore culpa
+        quisquam, voluptates quibusdam soluta saepe repellendus laudantium
+        magnam ducimus ratione ea vitae provident laboriosam quaerat assumenda.
+      </p>
+    </section>
+
+    <div class="pimg1">
+      <div class="ptext">
+        <span class="border">Jobloop</span>
+      </div>
+
+  </body>
 </html>
